tests/evaluate/fail/wrongtypes.src
// We can only use operators on matching types. This should not evaluate.
main () {
    x = 1 == 1;
    x = $x + 2;

    b = 0;
    x = b +5;
}
